--- a/src/pages/projects/Calendar.css
+++ b/src/pages/projects/Calendar.css
@@ -10,3 +10,9 @@
     border-radius: 20px;
     margin-top: 100px;
 }
+
+#enter {
+    background-color: #934f4f;
+    color:white;
+    font-size: large;
+}
