--- a/src/pages/projects/Calendar.css
+++ b/src/pages/projects/Calendar.css
@@ -4,11 +4,11 @@
     background-color: white;
     margin: auto;
     width: 750px;
-    border: 4px solid black;
+    /* border: 4px solid black; */
     text-align: center;
     font-size: 20px;
     border-radius: 20px;
-    margin-top: 100px;
+    margin-top: 125px;
 }
 
 #enter {
@@ -21,4 +21,26 @@
 
 #enter:hover {
     opacity: 0.8;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+@media (max-width: 750px) {
+    #container2{
+        width: 100%;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 15%;
+    }
+    
+}
+
+@media (max-width: 410px) {
+    .inline-block {
+        display: inline-flex;
+    }
 }
