--- a/src/pages/projects/MagicEightBall.css
+++ b/src/pages/projects/MagicEightBall.css
@@ -3,7 +3,7 @@
     background-color: #25144a;
     margin: auto;
     width: 800px;
-    border: 4px solid white;
+    /* border: 4px solid white; */
     text-align: center;
     font-size: 20px;
     color: white;
@@ -13,6 +13,44 @@
     margin-top: 100px;
 }
 
-#container3 p {
+#questionForm {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.pink-outline {
     -webkit-text-stroke: 1px #d7a7fc;
 }
+
+#answer {
+    font-size: 2rem;
+}
+
+@media (max-width: 800px) {
+    #container3{
+        width: 90%;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 15%;
+    }
+    
+    #ball {
+        display: none;
+    }
+}
+
+@media (max-width: 550px) {
+    #questionForm {
+        display: inline;
+    }
+}
+
+@media (max-width: 414px) {
+    #questionForm input {
+        margin-bottom: 10px;
+    }
+}
+
