--- a/src/pages/projects/NumberGuessing.css
+++ b/src/pages/projects/NumberGuessing.css
@@ -4,10 +4,20 @@
     font-weight: 300;
     background-color: white;
     margin: auto;
-    border: 4px solid black;
     text-align: center;
     width: 500px;
     font-size: xx-large;
     border-radius: 20px;
     margin-top: 100px;
+}
+
+@media (max-width: 500px) {
+    #container{
+        width: 100%;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 15%;
+    }
 }
