--- a/src/pages/projects/Calendar.css
+++ b/src/pages/projects/Calendar.css
@@ -8,7 +8,7 @@
     text-align: center;
     font-size: 20px;
     border-radius: 20px;
-    margin-top: 125px;
+    /* margin-top: 125px; */
 }
 
 #enter {
